@@ -4,6 +4,7 @@ Copyright (C) 2011-2012 Intel Corporation
 Copyright (C) 2011 Collabora
 
 Version 0.3.7 - DD.Apr.2012
+* Fix vaapidecode to report unsupported codec profiles
 * Don't forcibly resize user provided X windows (Holger Kaelberer)
 * Recalculate render rect only if caps are negotiated (Holger Kaelberer)
 
